// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation renders correctly when menu is toggled 1`] = `
<div>
  <nav
    class="open"
    css="[object Object]"
  >
    <ul>
      <li>
        <a
          href="/picture"
          tabindex="2"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
          tabindex="3"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
          tabindex="4"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
          tabindex="5"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
          tabindex="6"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
          tabindex="7"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
          tabindex="8"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
          tabindex="9"
        >
          Contact
        </a>
      </li>
    </ul>
    <div>
      Menu
    </div>
  </nav>
</div>
`;

exports[`Navigation renders correctly with props 1`] = `
<div>
  <nav
    class="isFullscreen"
    css="[object Object]"
  >
    <ul>
      <li>
        <a
          href="/picture"
          tabindex="2"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
          tabindex="3"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
          tabindex="4"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
          tabindex="5"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
          tabindex="6"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
          tabindex="7"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
          tabindex="8"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
          tabindex="9"
        >
          Contact
        </a>
      </li>
    </ul>
    <div>
      Menu
    </div>
  </nav>
</div>
`;

exports[`Navigation renders correctly without props 1`] = `
<div>
  <nav
    class=""
    css="[object Object]"
  >
    <ul>
      <li>
        <a
          href="/picture"
          tabindex="2"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
          tabindex="3"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
          tabindex="4"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
          tabindex="5"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
          tabindex="6"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
          tabindex="7"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
          tabindex="8"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
          tabindex="9"
        >
          Contact
        </a>
      </li>
    </ul>
    <div>
      Menu
    </div>
  </nav>
</div>
`;
